@@ -4,7 +4,6 @@ import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.model.CannedAccessControlList;
 import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.sparta.ourportfolio.common.exception.GlobalException;
 import com.sparta.ourportfolio.project.entity.Project;
 import com.sparta.ourportfolio.project.entity.ProjectImage;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +15,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,10 +31,13 @@ public class S3Service {
 
         images = images.stream()
                 .map(s -> s.isEmpty() ? null : s)
-                .collect(Collectors.toList());
+                .toList();
 
         for (MultipartFile image : images) {
-            if (image == null) break;
+            if (image == null) {
+                projectImageList = project.getProjectImageList();
+                break;
+            }
 
             String fileName = UUID.randomUUID() + "_" + image.getOriginalFilename();
             String imageUrl = null;
@@ -57,7 +58,6 @@ public class S3Service {
 
     //파일을 s3에 업로드
     public String uploadFile(MultipartFile multipartFile) throws IOException {
-//        isFileExists(multipartFile);
         String fileName = UUID.randomUUID() + "_" + multipartFile.getOriginalFilename();
 
         ObjectMetadata objectMetadata = new ObjectMetadata();
@@ -69,23 +69,4 @@ public class S3Service {
         return amazonS3.getUrl(bucketName, fileName).toString();
     }
 
-    //파일 유 / 무 확인 메서드
-//    private void isFileExists(MultipartFile multipartFile) {
-//        if (multipartFile != null) {
-//            throw new GlobalException("파일이 존재하지 않습니다.");
-//        }
-//    }
-
 }
-
-
-//    public boolean delete(String fileUrl) {
-//        try {
-//            String[] temp = fileUrl.split("/");
-//            String fileKey = temp[temp.length - 1];
-//            amazonS3.deleteObject(bucketName, fileKey);
-//            return true;
-//        } catch (Exception e) {
-//            return false;
-//        }
-//    }
